tests/ui/derived_rhs_no_ref_unit.stderr
error[E0277]: the trait bound `Bar: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Bar`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Acceleration
             Area
             Baz
             DataThroughput
             DataVolume
             Energy
             Foo
             Force
           and $N others
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `BarUnit: quantities::LinearScaledUnit` is not satisfied
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::LinearScaledUnit` is not implemented for `BarUnit`
   |
   = help: the following other types implement trait `quantities::LinearScaledUnit`:
             AccelerationUnit
             AreaUnit
             BazUnit
             DataThroughputUnit
             DataVolumeUnit
             DurationUnit
             EnergyUnit
             FooUnit
           and $N others
note: required by a bound in `quantities::HasRefUnit`
  --> src/lib.rs
   |
   |     <Self as Quantity>::UnitType: LinearScaledUnit,
   |                                   ^^^^^^^^^^^^^^^^ required by this bound in `HasRefUnit`
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Bar: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Bar`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Acceleration
             Area
             Baz
             DataThroughput
             DataVolume
             Energy
             Foo
             Force
           and $N others
note: required for `Foo` to implement `std::ops::Mul<Bar>`
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Bar: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Bar`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Acceleration
             Area
             Baz
             DataThroughput
             DataVolume
             Energy
             Foo
             Force
           and $N others
note: required for `Bar` to implement `std::ops::Mul<Foo>`
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Bar: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Bar`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Acceleration
             Area
             Baz
             DataThroughput
             DataVolume
             Energy
             Foo
             Force
           and $N others
note: required for `Baz` to implement `std::ops::Div<Bar>`
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound introduced here
...
24 | struct Baz {}
   |        ^^^
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)
